SIS MVC finished

--- a/MVC_SIS/Exercises/Views/Student/Edit.cshtml
+++ b/MVC_SIS/Exercises/Views/Student/Edit.cshtml
@@ -46,6 +46,34 @@
                                     <div class="form-group">
                                         @Html.ListBoxFor(m => m.SelectedCourseIds, Model.CourseItems, new { @class = "form-control" })
                                     </div>
+
+                                    <h4>Address</h4>
+                                    <div class="form-group">
+                                        <label>Street 1:</label>
+                                        @Html.TextBoxFor(m => m.Student.Address.Street1, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Street 2:</label>
+                                        @Html.TextBoxFor(m => m.Student.Address.Street2, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>City:</label>
+                                        @Html.TextBoxFor(m => m.Student.Address.City, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>State Name:</label>
+                                        @Html.TextBoxFor(m => m.Student.Address.State.StateName, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>State Abbreviation:</label>
+                                        @Html.TextBoxFor(m => m.Student.Address.State.StateAbbreviation, new { @class = "form-control" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Zipcode:</label>
+                                        @Html.TextBoxFor(m => m.Student.Address.PostalCode, new { @class = "form-control" })
+                                    </div>
+
+
                                     <button type="submit" class="btn btn-primary">Save</button>
                                 </div>
                             </div>
