JAWAINDWORK-26 HR Portal Change Request 1 completed

--- a/HR Portal/HR Portal/Views/Home/ManageCategories.cshtml
+++ b/HR Portal/HR Portal/Views/Home/ManageCategories.cshtml
@@ -33,7 +33,7 @@
                     }
                 </tbody>
             </table>
-
+            @Html.ActionLink("Go to Add Policy", "AddPolicy", "Home")
         </div>
     </div>
 </div>
