--- a/HR Portal/HR Portal/Views/Home/AddPolicy.cshtml
+++ b/HR Portal/HR Portal/Views/Home/AddPolicy.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <h3>Add State</h3>
+        <h3>Add Policy</h3>
         @Html.ActionLink("Return to Mangage Policies", "ManagePolicies", "Home")
     </div>
 </div>
@@ -27,17 +27,13 @@
                 @Html.TextBoxFor(p => p.Policy.PolicyText, new { @class = "form-control", placeholder = "Policy Text" })
             </div>
 
-            <div class="form-group">
+            <div styleclass="form-group" style="float:left; padding-right:5px;">
                 <label>Category</label>
-                @foreach (var c in Model.CategoryItems)
-                {
-                    @Html.DropDownListFor(c => c.Category)
-                }
-
+                @Html.DropDownListFor(p => p.Policy.Category.CategoryId, Model.CategoryItems)
             </div>
-
-             <br />
-            <button type="submit" class="btn btn-sm btn-primary">Save</button>
+            <div style="float:left; padding-right:5px;">@Html.ActionLink("Add a Category", "AddCategory", "Home", null, new { @class = "btn btn-primary btn-xs" })</div>
+            <br /><br />
+            <p><button type="submit" class="btn btn-sm btn-primary">Save</button></p>
         }
     </div>
 </div>      
