--- a/MVC_SIS/Exercises/Views/Shared/_Layout.cshtml
+++ b/MVC_SIS/Exercises/Views/Shared/_Layout.cshtml
@@ -45,5 +45,6 @@
     </div>
     <script src="~/Scripts/jquery-2.2.3.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    @RenderSection("Scripts", false)
 </body>
 </html>
