--- a/HR Portal/HR Portal/Views/Shared/_Layout.cshtml
+++ b/HR Portal/HR Portal/Views/Shared/_Layout.cshtml
@@ -18,15 +18,22 @@
                 </button>
                 @*@Html.ActionLink("HR Portal", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+            <div class="navbar-collapse collapse" >
+                <ul class="nav navbar-nav" id="topLevelMenu">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Policies<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu" >
                             <li>@Html.ActionLink("View Policies", "ViewPolicies", "Home")</li>
                             <li>@Html.ActionLink("Manage Policies", "ManagePolicies", "Home")</li>
                             <li>@Html.ActionLink("Manage Categories", "ManageCategories", "Home")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Time Tracking<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Submit Time", "SubmitTime", "Home")</li>
+                            <li>@Html.ActionLink("View Worksheet", "ViewWorksheet", "Home")</li>
                         </ul>
                     </li>
                 </ul>
