--- a/HR Portal/HR Portal/Views/Shared/_Layout.cshtml
+++ b/HR Portal/HR Portal/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Time Tracking<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Submit Time", "SubmitTime", "Home")</li>
-                            <li>@Html.ActionLink("View Worksheet", "ViewWorksheet", "Home")</li>
+                            <li>@Html.ActionLink("Submit Time", "AddTimeSheet", "Home")</li>
+                            <li>@Html.ActionLink("View Timesheet", "ViewTimeSheet", "Home")</li>
                         </ul>
                     </li>
                 </ul>
