--- a/DVDLibrary/DvdLibrary.UI/Views/Shared/_DVDCount.cshtml
+++ b/DVDLibrary/DvdLibrary.UI/Views/Shared/_DVDCount.cshtml
@@ -7,7 +7,7 @@
    <table class="table table-bordered">
         <tbody>
             <tr>
-               <td>Current DVD's In Library: @Model.Count</td>
+               <td id="dvdCount">Current DVD's In Library: @Model.Count</td>
             </tr>
         </tbody>
 
