--- a/DVDLibrary/DvdLibrary.UI/Views/Shared/_CreateDVDModal.cshtml
+++ b/DVDLibrary/DvdLibrary.UI/Views/Shared/_CreateDVDModal.cshtml
@@ -21,7 +21,7 @@
                         <h2>Create DVD</h2>
                         <div class="form-group">
                             <label>Title</label>
-                            <input type="text" id="title" class="form-control" />
+                            <input type="text" id="title" name ="titleInput"class="form-control" />
                         </div>
 
                         <div class="form-group">
