--- a/BaseballLeague/BaseballLeague/Views/Shared/_Layout.cshtml
+++ b/BaseballLeague/BaseballLeague/Views/Shared/_Layout.cshtml
@@ -17,12 +17,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("View Players", "ViewPlayerList", "Home")</li>
+                    <li>@Html.ActionLink("View Teams", "ViewTeams", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
