--- a/BlogTestApp/BlogTestApp/Views/TinyMCESample/ViewBlogPosts.cshtml
+++ b/BlogTestApp/BlogTestApp/Views/TinyMCESample/ViewBlogPosts.cshtml
@@ -23,8 +23,7 @@
 
    <h1>Title: @post.PostName</h1>
 <p>
-    @Html.Raw(
-     post.Post.Substring(0, 20) + "...")
+    @post.Post
 </p>
 
 <p>==============================================================================</p>
