--- a/identityTUtorial/identityTUtorial/Views/Home/Contact.cshtml
+++ b/identityTUtorial/identityTUtorial/Views/Home/Contact.cshtml
@@ -4,14 +4,9 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-@if (ViewBag.IsAdmin)
+@if (!ViewBag.IsAdmin)
 {
-    <address>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399<br />
-        <abbr title="Phone">P:</abbr>
-        425.555.0100
-    </address>
+    Layout = null;
 }
 
 
